Cambio de titulo
Se ha cambiado el titulo para practicar pull

--- a/prueba.html
+++ b/prueba.html
@@ -1,4 +1,4 @@
-<title>Esto es solo un sitio web de prueba</title>
+<title>Sitio web de prueba</title>
 <body>
     Estos son los cambios a realizar en la segunda rama del archivo  y por ende las modificaciones que van ha hacer vida en nuestro sitio web.
 
